--- a/pom.xml
+++ b/pom.xml
@@ -19,12 +19,19 @@
 
     <dependencies>
 
-        <!-- Servlet API (Tomcat 9 uses javax.servlet) -->
+        <!-- Servlet API for Tomcat 9 -->
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
             <version>4.0.1</version>
             <scope>provided</scope>
+        </dependency>
+
+        <!-- Joda-Time (required by HelloWorld.java) -->
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.12.5</version>
         </dependency>
 
         <!-- JUnit for testing -->
