Update finalName to use artifactId and version

--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
     </dependencies>
 
     <build>
-        <finalName>gs-maven</finalName>
+        <finalName>${project.artifactId}-${project.version}</finalName>
     </build>
 
 </project>
