Add sonar-maven-plugin to pom.xml
Add SonarQube Maven plugin to the build section

--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,12 @@
 
     <build>
         <finalName>${project.artifactId}-${buildNumber}</finalName>
-    </build>
+    <plugin>
+    <groupId>org.sonarsource.scanner.maven</groupId>
+    <artifactId>sonar-maven-plugin</artifactId>
+    <version>3.11.0.3922</version>
+</plugin>
+
+     </build>
 
 </project>
