--- a/pom.xml
+++ b/pom.xml
@@ -46,12 +46,16 @@
 
     <build>
         <finalName>${project.artifactId}-${buildNumber}</finalName>
-    <plugin>
-    <groupId>org.sonarsource.scanner.maven</groupId>
-    <artifactId>sonar-maven-plugin</artifactId>
-    <version>3.11.0.3922</version>
-</plugin>
 
-     </build>
+        <plugins>
+            <!-- SonarQube Maven plugin -->
+            <plugin>
+                <groupId>org.sonarsource.scanner.maven</groupId>
+                <artifactId>sonar-maven-plugin</artifactId>
+                <version>3.11.0.3922</version>
+            </plugin>
+        </plugins>
+
+    </build>
 
 </project>
