Update pom.xml with build number and plugin configurations

--- a/pom.xml
+++ b/pom.xml
@@ -15,10 +15,10 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <buildNumber>1</buildNumber> <!-- Replace with Jenkins BUILD_NUMBER -->
     </properties>
 
     <dependencies>
-
         <!-- Servlet API for Tomcat 9 -->
         <dependency>
             <groupId>javax.servlet</groupId>
@@ -27,7 +27,7 @@
             <scope>provided</scope>
         </dependency>
 
-        <!-- Joda-Time (required by HelloWorld.java) -->
+        <!-- Joda-Time -->
         <dependency>
             <groupId>joda-time</groupId>
             <artifactId>joda-time</artifactId>
@@ -41,13 +41,40 @@
             <version>4.13.2</version>
             <scope>test</scope>
         </dependency>
-
     </dependencies>
 
     <build>
         <finalName>${project.artifactId}-${buildNumber}</finalName>
 
         <plugins>
+            <!-- Maven Compiler Plugin -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
+                <configuration>
+                    <source>${maven.compiler.source}</source>
+                    <target>${maven.compiler.target}</target>
+                </configuration>
+            </plugin>
+
+            <!-- Maven WAR Plugin -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>3.3.2</version>
+                <configuration>
+                    <failOnMissingWebXml>false</failOnMissingWebXml>
+                </configuration>
+            </plugin>
+
+            <!-- Maven Surefire Plugin (for tests) -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.1.2</version>
+            </plugin>
+
             <!-- SonarQube Maven plugin -->
             <plugin>
                 <groupId>org.sonarsource.scanner.maven</groupId>
@@ -55,7 +82,6 @@
                 <version>3.11.0.3922</version>
             </plugin>
         </plugins>
-
     </build>
 
 </project>
