--- a/jenkinsfile
+++ b/jenkinsfile
@@ -3,12 +3,12 @@ pipeline {
 
     environment {
         APP_NAME = "gs-maven"
-        WAR_FILE = "target/${APP_NAME}-0.1.0.war"
+        WAR_FILE = "target/gs-maven-0.1.0.war"
         DOCKER_IMAGE = "gs-maven-app:latest"
+        DOCKER_CONTAINER = "gs-maven-container"
         REMOTE_USER = "ubuntu"
         REMOTE_HOST = "16.171.129.229"
         SSH_KEY = "/var/lib/jenkins/.ssh/id_ed25519"
-        DOCKER_CONTAINER = "gs-maven-container"
     }
 
     stages {
@@ -27,28 +27,19 @@ pipeline {
 
         stage('Build Docker Image') {
             steps {
-                script {
-                    writeFile file: 'Dockerfile', text: """
-                    FROM tomcat:9.0
-                    COPY ${WAR_FILE} /usr/local/tomcat/webapps/${APP_NAME}.war
-                    EXPOSE 8080
-                    """
-                }
-                sh "docker build -t ${DOCKER_IMAGE} ."
+                sh "docker build --build-arg WAR_FILE=${WAR_FILE} -t ${DOCKER_IMAGE} ."
             }
         }
 
         stage('Deploy to EC2-B') {
             steps {
-                script {
-                    sh """
-                    ssh -i ${SSH_KEY} -o StrictHostKeyChecking=no ${REMOTE_USER}@${REMOTE_HOST} '
-                        docker stop ${DOCKER_CONTAINER} || true
-                        docker rm ${DOCKER_CONTAINER} || true
-                        docker run -d --name ${DOCKER_CONTAINER} -p 8080:8080 ${DOCKER_IMAGE}
-                    '
-                    """
-                }
+                sh """
+                ssh -i ${SSH_KEY} -o StrictHostKeyChecking=no ${REMOTE_USER}@${REMOTE_HOST} '
+                    docker stop ${DOCKER_CONTAINER} || true
+                    docker rm ${DOCKER_CONTAINER} || true
+                    docker run -d --name ${DOCKER_CONTAINER} -p 8080:8080 ${DOCKER_IMAGE}
+                '
+                """
             }
         }
 
@@ -56,10 +47,11 @@ pipeline {
 
     post {
         success {
-            echo "Deployment successful! Open http://${REMOTE_HOST}:8080/${APP_NAME}/"
+            echo "Deployment successful! Open http://${REMOTE_HOST}:8080/"
         }
         failure {
             echo "Deployment failed!"
         }
     }
 }
+
