--- a/pom.xml
+++ b/pom.xml
@@ -19,11 +19,11 @@
     </properties>
 
     <dependencies>
-        <!-- Servlet API for Tomcat 9 -->
+        <!-- Jakarta Servlet API for Tomcat 10 -->
         <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
-            <version>4.0.1</version>
+            <groupId>jakarta.servlet</groupId>
+            <artifactId>jakarta.servlet-api</artifactId>
+            <version>5.0.0</version>
             <scope>provided</scope>
         </dependency>
 
