--- a/pom.xml
+++ b/pom.xml
@@ -19,11 +19,11 @@
     </properties>
 
     <dependencies>
-        <!-- Jakarta Servlet API for Tomcat 10 -->
+        <!-- Servlet API for Tomcat 9 -->
         <dependency>
-            <groupId>jakarta.servlet</groupId>
-            <artifactId>jakarta.servlet-api</artifactId>
-            <version>5.0.0</version>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>4.0.1</version>
             <scope>provided</scope>
         </dependency>
 
@@ -68,7 +68,7 @@
                 </configuration>
             </plugin>
 
-            <!-- Maven Surefire Plugin (for tests) -->
+            <!-- Maven Surefire Plugin -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
